[project]
name = "wt"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"

dependencies = [
    "django",
    "wagtail>7",
    "gunicorn==22",
    "elasticsearch==7.13.4",
    "wagtail-localize",
    "wagtail-modeladmin",
    "python-dotenv",
    "sentry-sdk[django]",
    "wagtail-grapple>=0.27.0",
    "wagtail-headless-preview>=0.8.0",
    "whitenoise>=6.8.2",
    "django-storages[s3]>=1.14.4",
    "dj-database-url>=2.3.0",
]

[project.optional-dependencies]
mysql = ["mysqlclient>=2.2.6"]
postgres = ["psycopg[binary]>=3.2.3"]
